--- a/composer.json
+++ b/composer.json
@@ -11,6 +11,8 @@
     "php": ">=7.0",
     "doctrine/annotations": "~1.0",
     "symfony/property-access": "^3.4|^4.4|^5.0",
+    "symfony/http-foundation": "^3.4|^4.4|^5.0",
+    "symfony/options-resolver": "^3.4|^4.4|^5.0",
     "sensio/framework-extra-bundle": "~5.0"
   },
   "require-dev": {
