--- a/composer.json
+++ b/composer.json
@@ -16,7 +16,7 @@
     "sensio/framework-extra-bundle": "~5.0"
   },
   "require-dev": {
-    "phpunit/phpunit": ">5.0"
+    "symfony/phpunit-bridge": "^4.2"
   },
   "extra": {
     "branch-alias": {
